hphp/test/zend/good/ext/standard/tests/serialize/bug30234.php.skipif
<?php
<<__EntryPoint>> function main() {
if (class_exists('autoload_root', false)) die('skip Autoload test classes exist already');
}
