hphp/test/zend/bad/ext/standard/tests/streams/bug61371-win.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != 'WIN' ) {
	die('skip windows only test');
}